# miniproject

./: .gitignore  .gitmessage.txt  README.md  manage.py  pyproject.toml
.github/workflows/: checks.yml
accounts/: admin.py  models.py  serializers.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_alter_account_account_type_alter_account_bank_code.py  0003_alter_account_bank_code.py  0004_alter_account_balance.py
analysis/: admin.py  models.py
analysis/migrations/: 0001_initial.py
common/: models.py
config/settings/: base.py  dev.py  prod.py
config/urls/: __init__.py  urls_dev.py
notifications/: admin.py  models.py  urls.py  views.py
notifications/migrations/: 0001_initial.py
transaction_history/: admin.py  choices.py  models.py  serializers.py  urls.py  views.py
transaction_history/migrations/: 0001_initial.py  0002_rename_transaction_id_transactionhistory_id.py  0003_alter_transactionhistory_transaction_method_and_more.py  0004_alter_transactionhistory_post_transaction_balance.py  0005_alter_transactionhistory_post_transaction_balance.py  0006_rename_id_transactionhistory_transaction_id_and_more.py
users/: apps.py  authentication.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_groups_user_is_superuser_user_user_permissions.py
